--- a/calс.html
+++ b/calс.html
@@ -12,7 +12,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css" />
-  <!-- <link rel="icon" href="favicon.ico"> -->
+  <link rel="icon" href="favicon.svg" type="image/svg+xml">
 </text></svg>">
 </head>
 <body>
@@ -294,4 +294,5 @@
     goToStep(1);
   </script>
 </body>
+
 </html>
